# euets-scraper

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/euets_scraper/: __init__.py  archive.py  cli.py  scraper.py
tests/: test_archive.py  test_scraper.py
tests/fixtures/: accordion.html  accordion_superseded.html  accordions_with_errors.html  download_page.html
