[project]
name = "euets-scraper"
version = "0.1.0"
description = "Scrape carbon quotas from EU ETS"
readme = "README.md"
authors = [
    { name = "Vegard Egeland", email = "vegardegeland@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
