[project]
name = "euets-scraper"
version = "0.1.0"
description = "Scrape carbon quotas from EU ETS"
readme = "README.md"
authors = [
    { name = "Vegard Egeland", email = "vegardegeland@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
full = ["playwright"]
cli = ["typer", "rich"]

[project.scripts]
euets = "euets_scraper.cli:app"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "playwright",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "typer>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
